--- a/PilotLight/PilotLight.vcxproj
+++ b/PilotLight/PilotLight.vcxproj
@@ -190,6 +190,7 @@
     <ClCompile Include="RichTextRenderer.cpp" />
     <ClCompile Include="ThemedRichEdit.cpp" />
     <ClCompile Include="PluginHost.cpp" />
+    <ClCompile Include="ToolConfirmationDialog.cpp" />
   </ItemGroup>
   <!-- Headers -->
   <ItemGroup>
@@ -207,6 +208,7 @@
     <ClInclude Include="RichTextRenderer.h" />
     <ClInclude Include="ThemedRichEdit.h" />
     <ClInclude Include="PluginHost.h" />
+    <ClInclude Include="ToolConfirmationDialog.h" />
   </ItemGroup>
   <!-- Resources -->
   <ItemGroup>
